# PL-Predictor

./: .env.example  .gitignore  project_plan.md  pyproject.toml  requirements.txt  skills.sh
.github/workflows/: daily_scrape.yml
config/: settings.yaml  team_mappings.json
data/features/: feature_selection_report.csv  pl_feature_matrix.csv  pl_feature_matrix_pruned.csv
data/processed/: .gitkeep  pl_current_injuries.csv  pl_matches_merged.csv  pl_xg_season_stats.csv
features/: __init__.py  feature_selection.py  form_features.py  h2h_features.py  pipeline.py  schedule_features.py  squad_features.py  validation.py  xg_features.py
ingestion/: __init__.py  api_football_client.py  base_scraper.py  fbref_scraper.py  injury_scraper.py  orchestrator.py  understat_scraper.py
model/: __init__.py  evaluator.py  predictor.py  registry.py  trainer.py
models/: feature_columns.joblib  feature_scaler.joblib  logistic_baseline.joblib  logistic_baseline_metadata.json  model_evaluation.md  random_forest.joblib  random_forest_metadata.json  xgboost_primary.joblib  xgboost_primary_metadata.json
ui/: __init__.py
