[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pl-predictor"
version = "0.1.0"
description = "Premier League match outcome predictor with ML-powered predictions and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PL-Predictor Team"},
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "responses>=0.24.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ingestion --cov=features --cov=model --cov-report=term-missing"
